# Max-Handbook

./: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/web-sync/: SKILL.md
artifacts/deepml/: problems_metadata.json
artifacts/deepml/full/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+7 more)
docs/ai-agents/evaluation/: README.md
docs/ai-agents/guardrails/: README.md
docs/ai-agents/memory/: README.md
docs/ai-agents/multi-agent/: README.md
docs/ai-agents/observability/: README.md
docs/ai-agents/overview/: README.md  decision-methods.md  roadmap-2026.md
docs/ai-agents/planning/: README.md
docs/ai-agents/prompting/: README.md
docs/ai-agents/rag/: README.md
docs/ai-agents/tool-use/: README.md
docs/ai-agents/workflows/: README.md
docs/databases/: README.md
docs/databases/caching/: overview.md
docs/databases/indexing/: overview.md
docs/databases/nosql/: overview.md
docs/databases/query-plans/: overview.md
docs/databases/relational/: overview.md
docs/databases/schema-design/: overview.md
docs/databases/streaming/: overview.md
docs/ml/: README.md
docs/software-engineering/: README.md
scripts/: new_dsa_problem.sh
templates/dsa-problem/: README.md
web/: README.md  package.json
(+1592 files in other folders)
